feat(api-service): add group endpoints
