# api-service/openapi.json
@@ -132,6 +132,89 @@
 				}
 			}
 		},
+		"/api/v1/groups": {
+			"post": {
+				"tags": ["groups"],
+				"summary": "Create group",
+				"operationId": "create_group",
+				"requestBody": {
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateGroup"
+							}
+						}
+					},
+					"required": true
+				},
+				"responses": {
+					"200": {
+						"description": "Group successfully created",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/DisplayGroup"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad Request",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BadRequestErrorBody"
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Internal Server Error"
+					}
+				},
+				"security": [
+					{
+						"token": []
+					}
+				]
+			}
+		},
+		"/api/v1/groups/": {
+			"get": {
+				"tags": ["groups"],
+				"summary": "List groups visible by the logged in user",
+				"operationId": "list_groups",
+				"responses": {
+					"200": {
+						"description": "User",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"$ref": "#/components/schemas/DisplayGroup"
+									}
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized"
+					},
+					"404": {
+						"description": "Not Found"
+					},
+					"500": {
+						"description": "Internal Server Error"
+					}
+				},
+				"security": [
+					{
+						"token": []
+					}
+				]
+			}
+		},
 		"/api/v1/users": {
 			"post": {
 				"tags": ["users"],
@@ -244,6 +327,17 @@
 					}
 				}
 			},
+			"CreateGroup": {
+				"type": "object",
+				"description": "Struct to create a new Group",
+				"required": ["name"],
+				"properties": {
+					"name": {
+						"type": "string",
+						"minLength": 1
+					}
+				}
+			},
 			"CreateUser": {
 				"type": "object",
 				"description": "Struct to create a new user",
@@ -260,6 +354,19 @@
 					"password": {
 						"type": "string",
 						"minLength": 1
+					}
+				}
+			},
+			"DisplayGroup": {
+				"type": "object",
+				"description": "Returned Group",
+				"required": ["id", "name"],
+				"properties": {
+					"id": {
+						"type": "string"
+					},
+					"name": {
+						"type": "string"
 					}
 				}
 			},
